# simpleadder

./: .env  .envrc  .gitignore  Makefile  README.md  adder.yaml  pyproject.toml  pyproject.toml~
docs/: 01-openapi30.md  02-adder.md  03-swaggereditor.md  prompt-pytest.md  prompt.md
src/simpleadder/: __init__.py  main.py
tests/: test_add.py
