[project]
name = "simpleadder"
version = "0.1.0"
description = "Web service to Add two integer numers"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
	"fastapi",
	"httpx>=0.28.1",
	"pytest>=9.0.3",
	"requests>=2.33.1",
	"uvicorn[standard]",
]

[project.scripts]
simpleadder = "uvicorn.main:main"
